--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.6"
+    "vite": "^7.1.6",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
